--- a/public/views/home.html
+++ b/public/views/home.html
@@ -11,6 +11,6 @@
 
 <!--   need a button instead?-->
 <!--    <a ui-sref="profile" ng-click="login(user.userName, user.password)">Login</a>-->
-    <button ng-click="login(user)">Login</button>
+    <button ng-click="login(user)">login</button>
   </div>
 </div>
